--- a/front_end/config/application.conf
+++ b/front_end/config/application.conf
@@ -1,1 +1,4 @@
 LOG_LOCATION = '/var/log/scoring-machine'
+RQ_REDIS_URL = 'redis://172.17.0.3:6379'
+CELERY_BROKER_URL = 'redis://172.17.0.2:6379'
+CELERY_RESULT_BACKEND = 'redis://172.17.0.2:6379'
