General Formatting and file clean up.

--- a/front_end/config/application.conf
+++ b/front_end/config/application.conf
@@ -1,2 +1,4 @@
 LOG_LOCATION = '/var/log/scoring-machine'
 BACK_END_LOCATION = 'localhost:5001'
+CONFIG_PASSWORD = 'ThisIsAGoodPassword1'
+REQUIRE_CONFIG_PASSWORD = 'False'
