--- a/front_end/config/application.conf
+++ b/front_end/config/application.conf
@@ -2,3 +2,4 @@ LOG_LOCATION = '/var/log/scoring-machine'
 BACK_END_LOCATION = 'localhost:5001'
 CONFIG_PASSWORD = 'ThisIsAGoodPassword1'
 REQUIRE_CONFIG_PASSWORD = 'False'
+MYSQL_LOCATION = 'localhost:3306'
