--- a/front_end/config/application.conf
+++ b/front_end/config/application.conf
@@ -1,2 +1,5 @@
 LOG_LOCATION = '/var/log/scoring-machine'
 BACK_END_LOCATION = 'localhost:5001'
+MYSQL_LOCATION = 'localhost'
+MYSQL_USER = 'scoring_engine'
+MYSQL_PWD = 'Changeme1!'
