--- a/config/application.conf
+++ b/config/application.conf
@@ -3,3 +3,5 @@ MYSQL_USER = 'scoring_engine'
 MYSQL_PASSWORD = 'Changeme1!'
 MYSQL_HOST = '172.17.0.2'
 MYSQL_DB = 'scoring_engine'
+CONFIG_PASSWORD = 'ThisIsAGoodPassword1'
+REQUIRE_CONFIG_PASSWORD = 'no'
