Removed Database class and a bunch of other stuff

--- a/back_end/config/service.conf
+++ b/back_end/config/service.conf
@@ -21,12 +21,16 @@ IP = 0.0.0.0
 PORT = 110
 SQLTable = pop3
 InformationTable = pop3_info
+USER = admin
+PASSWORD = Changeme1!
 
 [SMTP]
 IP = 0.0.0.0
 PORT = 25
 SQLTable = smtp
 InformationTable = smtp_info
+FROM_USER = admin
+DOMAIN = team.local
 
 [WINDOWS_DNS]
 IP = 8.8.8.8
