Accepting Updating in the back

--- a/back_end/config/service.conf
+++ b/back_end/config/service.conf
@@ -21,25 +21,25 @@ IP = 0.0.0.0
 PORT = 110
 SQLTable = pop3
 InformationTable = pop3_info
-USER = admin
+USER = user
 PASSWORD = Changeme1!
 
 [SMTP]
 IP = 0.0.0.0
 PORT = 25
 SQLTable = smtp
-InformationTable = smtp_info
 FROM_USER = admin
+TO_USER = user
 DOMAIN = team.local
 
 [WINDOWS_DNS]
 IP = 8.8.8.8
 PORT = 53
 SQLTable = dns_windows
-DOMAINS = google.com/yahoo.com/bing.com
+DOMAINS = google.com,yahoo.com,bing.com
 
 [LINUX_DNS]
 IP = 1.1.1.1
 PORT = 53
 SQLTable = dns_linux
-DOMAINS = google.com/yahoo.com/bing.com
+DOMAINS = google.com,yahoo.com,bing.com
