General Testing and bug smashing

--- a/back_end/ref/config_ref.json
+++ b/back_end/ref/config_ref.json
@@ -21,7 +21,12 @@
     "data": {
         "service": "ldap",
         "ip": "1.1.1.1",
-        "users": []
+        "users": [
+            {
+                "username": "",
+                "password": ""
+            }
+        ]
     }
 }
 {
