Added it to work with pip

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,11 @@ install_requires =
     nslookup
 packages = find:
 
+[options.data_files]
+scoring-engine =
+    scoring_engine/config/application.conf
+    scoring_engine/back_end/config/service.conf
+
 [options.entry_points]
 console_scripts =
     engine = scoring_engine:start_server
