--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,12 @@ scoring-engine =
     scoring_engine/config/application.conf
     scoring_engine/back_end/config/service.conf
 
+scoring-engine/service = 
+    scoring_engine/service/scoring.engine.back.service
+    scoring_engine/service/scoring.engine.front.service
+
 [options.entry_points]
 console_scripts =
-    engine = scoring_engine:start_server
+    engine-front = scoring_engine:start_front_server
+    engine-back = scoring_engine:start_back_server
     
