--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -13,6 +13,10 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
+      - name: Generate files
+        run: |
+          python -m pip install setuptools pep517
+          python -m pep517.build .
       - name: Create a Release
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
