--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -13,6 +13,11 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
       - name: Generate files
         run: |
           pwd
