--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -20,11 +20,8 @@ jobs:
           python-version: '3.x'
       - name: Generate files
         run: |
-          pwd
-          ls
-          cd ..
-          pwd
-          ls
+          python -m pip install setuptools pep517
+          python -m pep517.build .
       - name: Create a Release
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
