--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -22,6 +22,9 @@ jobs:
         run: |
           python -m pip install setuptools pep517
           python -m pep517.build .
+          ls ./dist
+      - name: list files
+        run: ls ./dist
       - name: Create a Release
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
