--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -30,6 +30,6 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
-          prerelease: true
+          prerelease: false
           files: |
             dist/*
