--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 name = scoring-engine
 version = 0.1
-author= Gabe Stier
-author_email= gabezter@gmail.com
+author = Gabe Stier
+author_email = gabezter@gmail.com
+url = https://github.com/gabe-stier/Scoring-Machine
 
 [options]
 include_package_data = True
