--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ version = 0.1
 author = Gabe Stier
 author_email = gabezter@gmail.com
 url = https://github.com/gabe-stier/Scoring-Machine
+license = MIT
 
 [options]
 include_package_data = True
