--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 include requirements.txt
+include LICENSE
+include README.md
 recursive-include scoring_engine/sql *.sql
 recursive-include scoring_engine/config *.*
 recursive-include scoring_engine/front_end/sql *.*
