Attempt to add PreInstall Command

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,9 @@ install_requires =
     python-ldap
     nslookup
 packages = find:
+cmdclass = 
+    "install" : PreInstallCommand,
+    "develop" : PreDevelopCommand
 
 [options.data_files]
 scoring-engine =
