--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 0.1.2
 author = Gabe Stier
 author_email = gabezter@gmail.com
 url = https://github.com/gabe-stier/Scoring-Machine
-license = MIT
+license = GNU GENERAL PUBLIC LICENSE
 
 [options]
 include_package_data = True
