--- a/.github/workflows/build-back.yml
+++ b/.github/workflows/build-back.yml
@@ -16,8 +16,8 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
-        apt update
-        apt install -y build-essential python3-dev python2.7-dev libldap2-dev libsasl2-dev slapd ldap-utils tox lcov valgrind
+        sudo apt update
+        sudo apt install -y build-essential python3-dev python2.7-dev libldap2-dev libsasl2-dev slapd ldap-utils tox lcov valgrind
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run
