Added set up commands.

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,4 +32,5 @@ scoring-engine/service =
 console_scripts =
     engine-front = scoring_engine:start_front_server
     engine-back = scoring_engine:start_back_server
+    scoring-engine = scoring_engine:system_command
     
