Got LDAP working. Will work on POP3 and SMTP next.

--- a/scoring_engine/service/scoring.engine.back.service
+++ b/scoring_engine/service/scoring.engine.back.service
@@ -1,6 +1,5 @@
 [Unit]
 Description=Scoring Engine Backend
-After=network.target
 
 [Service]
 Type=simple
@@ -10,4 +9,4 @@ Restart=on-failure
 RestartSec=20s
 
 [Install]
-WantedBy=runlevel[234].target
+WantedBy=multi-user.target
