--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = scoring-engine
-version = 1.1.0
+version = 1.1.1
 author = Gabe Stier
 author_email = gabezter@gmail.com
 url = https://github.com/gabe-stier/Scoring-Machine
@@ -19,14 +19,14 @@ install_requires =
     nslookup
 packages = find:
 
-[options.data_files]
-scoring-engine =
-    scoring_engine/config/application.conf
-    scoring_engine/back_end/config/service.conf
-
-scoring-engine/service = 
-    scoring_engine/service/scoring.engine.back.service
-    scoring_engine/service/scoring.engine.front.service
+;[options.data_files]
+;scoring-engine =
+;    scoring_engine/config/application.conf
+;    scoring_engine/back_end/config/service.conf
+;
+;scoring-engine/service =
+;    scoring_engine/service/scoring.engine.back.service
+;    scoring_engine/service/scoring.engine.front.service
 
 [options.entry_points]
 console_scripts =
