--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -15,10 +15,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      - name: Generate files
+      - name: Get Version
         run: |
-          python -m pip install setuptools pep517
-          python -m pep517.build .
+          export VERSION=$(cat setup.cfg | grep version | awk '{split($0,a," "); print a[3]}')
+      - name: Fetch Latest Release
+        uses: thebritican/fetch-latest-release@v2.0.0
       - name: Create a Release
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -26,4 +27,5 @@ jobs:
           automatic_release_tag: "latest"
           prerelease: false
           files: |
-            dist/*
+            dist/scoring-engine-$VERSION.tar.gz
+        if: ${{ steps.fetch_latest_release.outputs.tag_name }} <  'v${{ env.VERSION }}'
