--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -28,4 +28,4 @@ jobs:
           prerelease: false
           files: |
             dist/*
-        if: ${{ steps.fetch_latest_release.outputs.tag_name }} <  v${{ env.VERSION }}
+        if: "${{ steps.fetch_latest_release.outputs.tag_name }}" <  "v${{ env.VERSION }}"
