Working on saving baseline scores.

--- a/scoring_engine/back_end/config/service.conf
+++ b/scoring_engine/back_end/config/service.conf
@@ -7,13 +7,13 @@ SQLTable = ldap
 [SPLUNK]
 IP = bing.com
 PORT = 80
-HashFile = etc/scoring/splunk.sh3
+HashFile = splunk.sh3
 SQLTable = splunk
 
 [ECOMMERCE]
 IP = google.com
 PORT = 80
-HashFile = etc/scoring/ecomm.sh3
+HashFile = ecomm.sh3
 SQLTable = ecomm
 
 [POP3]
