Fixed few bugs and testing pop3 and smtp stuff.

--- a/scoring_engine/back_end/config/service.conf
+++ b/scoring_engine/back_end/config/service.conf
@@ -28,6 +28,7 @@ IP = 0.0.0.0
 PORT = 25
 SQLTable = smtp
 FROM_USER = admin
+FROM_USER_PASSWORD = Changeme1!
 TO_USER = user
 DOMAIN = team.local
 
