--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -20,6 +20,12 @@ jobs:
           export VERSION=$(cat setup.cfg | grep version | awk '{split($0,a," "); print "v"a[3]}')
       - name: Fetch Latest Release
         uses: thebritican/fetch-latest-release@v2.0.0
+      - name: List versions
+        run: |
+          echo 'Version'
+          echo ${{ env.VERSION }}
+          echo 'Tag'
+          echo ${{ steps.fetch_latest_release.outputs.tag_name }}
       - name: Tag Commit
         uses: tvdias/github-tagger@v0.0.2
         with:
