--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: '3.x'
       - name: get-version
         run: |
-          echo "::set-output name=version::$(cat setup.cfg | grep version | awk '{split($0,a,\" \"); print \"v\"a[3]}')\n"
+          echo "::set-output name=version::$(cat setup.cfg | grep version | awk '{split($0,a," "); print "v"a[3]}')\n"
       - name: fetch-latest-release
         uses: thebritican/fetch-latest-release@v2.0.0
       - name: List versions
