New workflow design

--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -26,8 +26,8 @@ jobs:
           echo "Version: $VERSION"
           echo "Tag: $TAG"
         env:
-          TAG: ${{ steps.fetch-latest-release.outputs.tag_name }}
-          VERSION: ${{ steps.get-verison.outputs.version }}
+          TAG: ${{ join(steps.fetch-latest-release.outputs.*,'\t') }}
+          VERSION: ${{ join(steps.get-verison.outputs.*, '\t') }}
       - name: Tag Commit
         uses: tvdias/github-tagger@v0.0.2
         with:
