--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           echo ${{ steps.last-release.outputs.last_tag }}
           pip install requests
-          python get-release.py ${{ secrets.GITHUB_TOKEN }})
+          python get-release.py ${{ secrets.GITHUB_TOKEN }}
         id: last-tag
       - name: List versions
         run: |
