--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.current-version.outputs.version }}
-        if: ${{ steps.fetch_latest_release.outputs.tag_name < steps.current-verison.outputs.version }}
+        if: ${{ steps.last-tag.outputs.last_tag < steps.current-version.outputs.version }}
       - name: Create a Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
@@ -47,4 +47,4 @@ jobs:
           prerelease: false
           files: |
             dist/*
-        if: ${{ steps.fetch_latest_release.outputs.tag_name < steps.current-verison.outputs.version }}
+        if: ${{ steps.last-tag.outputs.last_tag < steps.current-version.outputs.version }}
