--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Tag Commit
         uses: tvdias/github-tagger@v0.0.2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.current-version.outputs.version }}
         if: ${{ steps.last-tag.outputs.last_tag < steps.current-version.outputs.version }}
       - name: Create a Release
