--- a/.github/workflows/release-major.yml
+++ b/.github/workflows/release-major.yml
@@ -18,7 +18,6 @@ jobs:
       - name: get-version
         run: |
           cat setup.cfg | grep version | awk '{split($0,a," "); print "::set-output name=version::v"a[3]}'
-#          echo '::set-output name=version::$(V)'
         id: current-version
       - name: Get Last Tag
         run: |
@@ -45,6 +44,5 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           automatic_release_tag: "latest"
           prerelease: false
-          files: |
-            dist/*
+          files: dist/scoring-engine-${{ steps.current-version.outputs.version }}.tar.gz
         if: ${{ steps.last-tag.outputs.last_tag < steps.current-version.outputs.version }}
